# OTPArchiver

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: schedule.yml
otparchiver/: cli.py
