[tool.poetry]
name = "otparchiver"
version = "0.1.0"
description = ""
authors = ["Kevin H. Wilson <khwilson@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.24.0"
click = "^7.1.2"
beautifulsoup4 = "^4.9.1"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
pytest = "^6.0.1"
black = "^19.10b0"

[tool.poetry.scripts]
otparchiver = "otparchiver.cli:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
